[package]
name = "sunk"
version = "0.1.2" # remember to update html_root_url
authors = ["xeals <xeals@pm.me>"]
description = "Rust bindings for the Subsonic music streaming API"
homepage = "https://github.com/xeals/sunk"
repository = "https://github.com/xeals/sunk"
documentation = "https://docs.rs/sunk/"
readme = "README.md"
keywords = ["subsonic", "airsonic", "music", "api", "webapi"]
categories = ["api-bindings"]
license = "Apache-2.0/MIT"
edition = "2021"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
log = "0.4.6"
md5 = "0.7.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11.6", default-features = false, features = ["json"] }
thiserror = "1.0.30"
serde_json = "1.0.72"
url = "2.2.2"
dirs = "4.0.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
